tests/scripts/errors/errors_8_expected.txt
stderr:

Compiling 'errors_8.zs'
Pass 1: Parsing
ERROR: Bad Annotation Value: @Author expects a String, not a Number


13    
14    // https://discord.com/channels/876899628556091432/1487233484924784682
15    @Author(1.11111) // expected error: Bad Annotation Value: @Author expects a String, not a Number
      ^~~~~~~~~~~~~~~~


Failure!
Compile finished with exit code '-1' (compiled with warnings)

stdout:

{
  "success": false,
  "code": -1,
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 14,
          "character": 0
        },
        "end": {
          "line": 14,
          "character": 16
        }
      },
      "severity": 1,
      "message": "ERROR: Bad Annotation Value: @Author expects a String, not a Number"
    }
  ]
}
